--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,6 @@ dependencies {
 
     //Zoomy
     implementation 'com.github.chrisbanes.photoview:library:1.2.4'
-
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -99,7 +98,8 @@ dependencies {
     implementation 'net.i2p.android.ext:floatingactionbutton:1.10.1'
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
+//    implementation 'me.everything:overscroll-decor-android:1.0.4'
+    implementation 'com.github.woxingxiao:BounceScrollView:1.3'
 
 }
 apply plugin: 'com.google.gms.google-services'
