with new registration flow email screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,9 +58,13 @@
             android:theme="@style/MyCustomTheme" />
         <activity android:name=".activity.ZoomImageActivity" />
         <activity
-            android:name=".activity.NewIntroActivity"
+            android:name=".activity.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Splash">
+        <!--<activity-->
+            <!--android:name=".activity.new_reg_flow.NewIntroActivity"-->
+            <!--android:screenOrientation="portrait"-->
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,6 +76,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.RegistrationActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.new_reg_flow.RegistrationActivityNewEmail"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.IntroActivity"
