--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:multidex:1.0.3'
 
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
@@ -100,6 +101,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 //    implementation 'me.everything:overscroll-decor-android:1.0.4'
     implementation 'com.github.woxingxiao:BounceScrollView:1.3'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
