--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.RegistrationActivity"
-            android:screenOrientation="portrait" />
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            />
 
         <activity
             android:name=".activity.new_reg_flow.RegistrationActivityNewEmail"
