--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.2.22'
     implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.2.22'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.0@aar') {
-        transitive = true;
+        transitive = true
     }
 
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
