--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
 //    implementation 'me.everything:overscroll-decor-android:1.0.4'
     implementation 'com.github.woxingxiao:BounceScrollView:1.3'
     implementation 'com.android.support:cardview-v7:26.1.0'
-
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
 
