--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,18 +15,27 @@ repositories {
 }
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('/home/mindiii/Downloads/dharmraj-release-key.keystore')
+            storePassword 'draj222073'
+            keyAlias = 'android'
+            keyPassword 'draj222073'
+        }
+    }
     compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.scenekey"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.0.4"
         multiDexEnabled true
 
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
@@ -94,13 +103,22 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
     //AWS
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.16.5'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.16.5'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.16.5'
+    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.16.5'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.0@aar') {
+        transitive = true
+    }
+
+    /*//AWS
     implementation 'com.amazonaws:aws-android-sdk-s3:2.2.22'
     implementation 'com.amazonaws:aws-android-sdk-core:2.2.22'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.2.22'
     implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.2.22'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.0@aar') {
         transitive = true
-    }
+    }*/
 
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
     implementation 'com.makeramen:roundedimageview:2.3.0'
